Fix header z-indexes, reduce menu trans. duration

--- a/css/custom.css
+++ b/css/custom.css
@@ -146,6 +146,21 @@ h1, h2, h3, h4, h5, h6 {
       color: #2b2b2b;
       background-color: white; } }
 
+#cssmenu > ul > li ul {
+  background-image: -webkit-gradient(linear, left 0%, left 100%, from(#00a4db), to(#007acc));
+  background-image: -webkit-linear-gradient(top, #00a4db, 0%, #007acc, 100%);
+  background-image: -moz-linear-gradient(top, #00a4db 0%, #007acc 100%);
+  background-image: linear-gradient(to bottom, #00a4db 0%, #007acc 100%);
+  background-repeat: repeat-x;
+  filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ff00a4db', endColorstr='#ff007acc', GradientType=0);
+  border-color: #007acc #007acc #004c80;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  *background-color: #007acc;
+  opacity: 0;
+  transition: opacity 1s ease-out;
+  -moz-transition: opacity 1s ease-out;
+  -webkit-transition: opacity 1s ease-out; }
+
 #cssmenu > ul li ul {
   background: #FFD400; }
   #cssmenu > ul li ul a:hover {
@@ -165,6 +180,9 @@ h1, h2, h3, h4, h5, h6 {
 #cssmenu > ul li:hover a {
   color: #2b2b2b;
   background: none #FFD400; }
+
+#cssmenu > ul > li ul {
+  transition-duration: 0.3s; }
 
 .breadcrumb {
   padding: 8px 0; }
